--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -15,7 +15,13 @@
 
    <h1>My First Webpage</h1>
 
-   <h3>Written with a little guidance from MOringa School</h3>
+   <h3>Written with a little guidance from Moringa School</h3>
+
+     <p>Hello, world!</p>
+     <p>Welcome to my <strong>first web page!</strong></p>
+     <p>Here are some things I'm going to learn about coding:</p>
+
+   
 
 
     
