Adding image to my first webpage

--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -31,6 +31,16 @@
      </p>
 
      <p>Check out <a target="_blank" href="https://moringaschool.com/courses/software-engineering-course/">Moringa School</a></p>
+     <p>Here is a link to my favourite things <a target="_blank"  href="https://github.com/moraaRuth/My-favorite-things">My favourite things</a></p>
+     <div>
+
+      <img src="/home/ruth/Moringa School Projects/my-first-webpage/Pet.jpeg" alt="Pretty Pet">
+
+
+
+     </div>
+
+   
 
    
 
