--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
  </head>
  <body>
 
+   <div class="body" >
+
    <h1>My First Webpage</h1>
 
    <h3>Written with a little guidance from Moringa School</h3>
 
      <p>Hello, world!</p>
      <p>Welcome to my <strong>first web page!</strong></p>
-     <p>Here are some things I'm going to learn about coding:</p>
+     <p>Here are some things I'm going to learn about <em>coding:</em></p>
      <p>
         <ol>
            <li>HTML</li>
@@ -41,14 +43,6 @@
      </div>
 
    
-
-   
-
-   
-
-   
-
-
     
  </body>
 </html>
